creation fichier assets et correction css collapse

--- a/src/css/about.scss
+++ b/src/css/about.scss
@@ -11,5 +11,9 @@
 @media all and (min-width: 767px) {
   .about__collapse {
     margin: 10px 60px;
+
+    p {
+      font-size: 24px;
+    }
   }
 }
