--- a/src/css/collapse.scss
+++ b/src/css/collapse.scss
@@ -112,7 +112,4 @@
       height: 47px;
     }
   }
-  .collapse .collapse__menu__description p {
-    font-size: 24px;
-  }
 }
